--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap');
+
 table, td, th {
     border:1px solid black;
+}
+
+body {
+    font-family: 'Signika Negative', sans-serif;
+    background-color:#333333;
 }
