--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
 table, td, th {
     border:1px solid black;
 }
@@ -7,4 +10,67 @@ table, td, th {
 body {
     font-family: 'Signika Negative', sans-serif;
     background-color:#333333;
+}
+h1 {
+    font-size:70px;
+    text-align: center;
+    color:#adadad;
+    text-decoration: underline;
+    text-decoration-color:#8b8b8b;
+}
+.slogan {
+font-size:20px;
+text-align: center;
+font-style: italic;
+position:relative;
+}
+.Sales {
+    float:right;
+}
+.navbar {
+    background-color: #adadad;
+    width:100%;
+    height:60px;
+    position:sticky;
+}
+.logo {
+    margin:7px;
+    display: inline-block;
+    vertical-align: top;
+   
+}
+.navbar a {
+    display:inline-block;
+    vertical-align:top;
+    margin-right:30px;
+    line-height: 60px;
+    text-decoration: none;
+    text-align:center;
+    color:black;
+}
+.cookies{
+    color:beige;
+}
+.aboutdiv {
+    padding:50px;
+    margin-top:100px;
+}
+.familyphoto {
+    float:right;
+}
+h2 {
+    text-align: center;
+    font-size:70px;
+}
+
+.aboutus {
+    font-size:50px;
+    float:left;
+    width:50%;
+}
+.navbar a:hover {
+    background-color:#8b8b8b;
+}
+.navbar a:active {
+    background-color:#8b8b8b;
 }
