--- a/style.css
+++ b/style.css
@@ -18,6 +18,24 @@ h1 {
     text-decoration: underline;
     text-decoration-color:#8b8b8b;
 }
+.locationp {
+    font-size:30px;
+    text-align: center;
+}
+.locationinfo {
+    background-color:#adadad;
+    width:400px;
+    height:1200px;
+    border-radius:20px;
+}
+.loc_container{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding:20px;
+    gap:100px;
+    
+}
 .slogan {
 font-size:20px;
 text-align: center;
@@ -52,21 +70,27 @@ position:relative;
     color:beige;
 }
 .aboutdiv {
-    padding:50px;
-    margin-top:100px;
+    margin-right: 10px;
+    display:flex;
+    justify-content: center;
+
 }
-.familyphoto {
-    float:right;
+.locationtext {
+    font-size: 20px;
+    margin:20px;
+    padding:7px;
 }
+
 h2 {
     text-align: center;
     font-size:70px;
 }
 
+
+
 .aboutus {
     font-size:50px;
-    float:left;
-    width:50%;
+    width:45%;
 }
 .navbar a:hover {
     background-color:#8b8b8b;
