--- a/style.css
+++ b/style.css
@@ -98,3 +98,52 @@ h2 {
 .navbar a:active {
     background-color:#8b8b8b;
 }
+.container {
+    background-color:#333333;
+    width:99%;
+    height:500px;
+    border-radius:20px;
+    border-color:#8b8b8b;
+    border-style:solid;
+    border-width: 10px;
+    box-shadow: 0 0 13px rgb(0 0 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.contactSec {
+    background-color:#333333;
+    
+}
+.icon {
+    width:80px;
+    height:80px;
+    display:block;
+}
+.mailcontainer {
+    background-color: #8b8b8b;
+    box-shadow: 0 0 13px rgb(0 0 0);
+    border-radius: 10%;
+    cursor:pointer;
+    
+}
+.email {
+    font-size: 50px;
+    padding:20px;
+    text-decoration: underline;
+}
+#cookietb {
+    margin-left:auto;
+    margin-right:auto;
+}
+.cookiecontainer {
+    background-color:#adadad;
+    padding:20px;
+    margin-top:50px;
+    border-radius: 10px;
+    box-shadow:0 0 13px rgb(0 0 0);
+    background-size:cover;
+    background-repeat: no-repeat;
+
+}
