--- a/style.css
+++ b/style.css
@@ -147,3 +147,27 @@ h2 {
     background-repeat: no-repeat;
 
 }
+.imgcontainer {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    padding:20px;
+
+}
+.imgcontainer img {
+    padding:20px;
+    margin-bottom: 20px;
+}
+.maincontainer {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+}
+.textcontainer {
+    text-align: center;
+}
+
+.imgp {
+    font-size:40px
+}
