--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
 
 html{
     scroll-behavior: smooth;
@@ -12,6 +14,7 @@ body {
     background-color:#333333;
 }
 h1 {
+    font-family: 'Russo One', sans-serif;
     font-size:70px;
     text-align: center;
     color:#adadad;
@@ -19,6 +22,7 @@ h1 {
     text-decoration-color:#8b8b8b;
 }
 .locationp {
+    font-family: 'Russo One', sans-serif;
     font-size:30px;
     text-align: center;
 }
@@ -82,6 +86,7 @@ position:relative;
 }
 
 h2 {
+    font-family: 'Russo One', sans-serif;
     text-align: center;
     font-size:70px;
 }
@@ -145,6 +150,7 @@ h2 {
     box-shadow:0 0 13px rgb(0 0 0);
     background-size:cover;
     background-repeat: no-repeat;
+    font-family: 'Montserrat', sans-serif;
 
 }
 .imgcontainer {
